--- a/admin/package.json
+++ b/admin/package.json
@@ -19,6 +19,7 @@
         "default-passive-events": "^2.0.0",
         "echarts": "^5.5.1",
         "element-plus": "^2.8.3",
+        "js-yaml": "^4.1.0",
         "nprogress": "^0.2.0",
         "pinia": "^2.2.2",
         "vue": "^3.5.6",
