--- a/nuxtjs/package.json
+++ b/nuxtjs/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@chenfengyuan/vue-countdown": "^2.1.2",
+        "@fortawesome/fontawesome-free": "^6.7.2",
         "@vueuse/core": "^11.1.0",
         "css-color-function": "^1.3.3",
         "element-plus": "^2.8.3",
