--- a/admin/tsconfig.json
+++ b/admin/tsconfig.json
@@ -26,7 +26,10 @@
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true
+        "noFallthroughCasesInSwitch": true,
+        "types": [
+            "@modyfi/vite-plugin-yaml/modules"
+        ]
     },
     "include": [
         "src/**/*.ts",
