--- a/nuxtjs/package.json
+++ b/nuxtjs/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@chenfengyuan/vue-countdown": "^2.1.2",
         "@fortawesome/fontawesome-free": "^6.7.2",
+        "@headlessui/vue": "^1.7.23",
         "@vueuse/core": "^11.1.0",
         "css-color-function": "^1.3.3",
         "element-plus": "^2.8.3",
