--- a/nuxtjs/package.json
+++ b/nuxtjs/package.json
@@ -20,6 +20,7 @@
         "css-color-function": "^1.3.3",
         "element-plus": "^2.8.3",
         "ismobilejs": "^1.1.1",
+        "motion-v": "^0.13.0-beta.1",
         "nuxt": "^3.13.2",
         "pinia": "^2.2.2",
         "vue": "^3.5.6",
