--- a/nuxtjs/package.json
+++ b/nuxtjs/package.json
@@ -22,7 +22,8 @@
         "ismobilejs": "^1.1.1",
         "motion-v": "^0.13.0-beta.1",
         "nuxt": "^3.13.2",
-        "pinia": "^2.2.2",
+        "pinia": "^2.3.1",
+        "pinia-plugin-persistedstate": "^4.2.0",
         "vue": "^3.5.6",
         "vue-cropper": "^1.1.4",
         "vue-qr": "^4.0.9",
@@ -32,7 +33,7 @@
         "@element-plus/nuxt": "^1.0.10",
         "@nuxt/eslint": "^0.5.7",
         "@nuxtjs/tailwindcss": "^6.12.1",
-        "@pinia/nuxt": "^0.5.4",
+        "@pinia/nuxt": "^0.9.0",
         "dotenv": "^16.4.5",
         "eslint": "^9.5.0",
         "fs-extra": "^11.2.0",
