--- a/admin/package.json
+++ b/admin/package.json
@@ -22,8 +22,10 @@
         "echarts": "^5.5.1",
         "element-plus": "^2.8.3",
         "js-yaml": "^4.1.0",
+        "lowlight": "^3.3.0",
         "nprogress": "^0.2.0",
         "pinia": "^2.2.2",
+        "tiptap-ant-design-vue": "^1.0.10",
         "vue": "^3.5.6",
         "vue-clipboard3": "^2.0.0",
         "vue-cropper": "^1.1.4",
