update software page

--- a/server/.example.env
+++ b/server/.example.env
@@ -9,10 +9,10 @@ SERVER_WORKERS=4
 
 MYSQL_HOST=127.0.0.1
 MYSQL_PORT=3306
-MYSQL_USERNAME=root
-MYSQL_PASSWORD=root
-MYSQL_DATABASE=ts_wait
-MYSQL_PREFIX=wait_
+MYSQL_USERNAME=entity
+MYSQL_PASSWORD=ZxC14770137
+MYSQL_DATABASE=AdminCustom
+MYSQL_PREFIX=Moq_
 MYSQL_MINSIZE=1
 MYSQL_MAXSIZE=100
 MYSQL_CHARSET=utf8mb4
