--- a/miniprogram/package.json
+++ b/miniprogram/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.4.18",
+    "postcss-replace": "^2.0.1",
     "react-refresh": "^0.11.0",
     "sass": "^1.60.0",
     "stylelint": "^14.4.0",
