--- a/miniprogram/package.json
+++ b/miniprogram/package.json
@@ -38,7 +38,7 @@
   "dependencies": {
     "@babel/runtime": "^7.21.5",
     "@nutui/nutui-biz": "1.0.0-beta.2",
-    "@nutui/nutui-react-taro": "^2.6.14",
+    "@nutui/nutui-react-taro": "3.0.19-cpp.11",
     "@tarojs/components": "4.1.7",
     "@tarojs/helper": "4.1.7",
     "@tarojs/plugin-framework-react": "4.1.7",
@@ -82,10 +82,11 @@
     "react-refresh": "^0.11.0",
     "sass": "^1.60.0",
     "stylelint": "^14.4.0",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "3.4.17",
     "terser": "^5.16.8",
     "typescript": "^5.1.0",
     "vite": "^4.2.0",
-    "vite-plugin-imp": "^2.4.0"
+    "vite-plugin-imp": "^2.4.0",
+    "weapp-tailwindcss": "^4.4.0"
   }
 }
