--- a/miniprogram/package.json
+++ b/miniprogram/package.json
@@ -56,8 +56,7 @@
     "@tarojs/shared": "4.1.7",
     "@tarojs/taro": "4.1.7",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "zustand": "^5.0.8"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
@@ -89,6 +88,7 @@
     "typescript": "^5.1.0",
     "vite": "^4.2.0",
     "vite-plugin-imp": "^2.4.0",
-    "weapp-tailwindcss": "^4.4.0"
+    "weapp-tailwindcss": "^4.4.0",
+    "zustand": "^5.0.8"
   }
 }
