--- a/miniprogram/tsconfig.json
+++ b/miniprogram/tsconfig.json
@@ -2,21 +2,22 @@
   "compilerOptions": {
     "target": "es2017",
     "module": "commonjs",
-    "removeComments": false,
     "preserveConstEnums": true,
     "ignoreDeprecations": "6.0",
     "experimentalDecorators": true,
-    "noImplicitAny": false,
     "allowSyntheticDefaultImports": true,
     "outDir": "lib",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "strictNullChecks": true,
-    "sourceMap": true,
     "baseUrl": ".",
     "rootDir": ".",
     "jsx": "react-jsx",
     "allowJs": true,
+    "noImplicitAny": false,
+    "noEmitOnError": true,
+    "removeComments": false,
+    "sourceMap": true,
     "resolveJsonModule": true,
     "typeRoots": [
       "node_modules/@types"
