--- a/admin/package.json
+++ b/admin/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build && node scripts/build.mjs",
+        "build:only": "vite build",
         "preview": "vite preview",
         "lint:js": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
         "lint:css": "stylelint ./**/*.{vue,htm,html,css,scss} --fix"
