--- a/miniprogram/project.config.json
+++ b/miniprogram/project.config.json
@@ -4,7 +4,7 @@
   "description": "一款商城小程序",
   "appid": "wx3a91e4621c3d76c3",
   "setting": {
-    "urlCheck": true,
+    "urlCheck": false,
     "es6": false,
     "enhance": false,
     "compileHotReLoad": false,
