--- a/nuxtjs/package.json
+++ b/nuxtjs/package.json
@@ -4,6 +4,7 @@
     "type": "module",
     "scripts": {
         "dev": "nuxt dev --dotenv .env.development",
+        "build:only-ssr": "nuxt build --dotenv .env.production",
         "build:ssr": "nuxt build --dotenv .env.production && node scripts/build.mjs",
         "build:gen": "nuxt generate --dotenv .env.production && node scripts/build.mjs",
         "generate": "nuxt generate",
@@ -20,7 +21,7 @@
         "css-color-function": "^1.3.3",
         "element-plus": "^2.8.3",
         "ismobilejs": "^1.1.1",
-        "motion-v": "^0.13.0-beta.1",
+        "motion-v": "1.7.4",
         "nuxt": "^3.13.2",
         "pinia": "^2.3.1",
         "pinia-plugin-persistedstate": "^4.2.0",
