update docker compose

--- a/server/.example.env
+++ b/server/.example.env
@@ -9,9 +9,9 @@ SERVER_WORKERS=4
 
 MYSQL_HOST=127.0.0.1
 MYSQL_PORT=3306
-MYSQL_USERNAME=entity
-MYSQL_PASSWORD=ZxC14770137
-MYSQL_DATABASE=AdminCustom
+MYSQL_USERNAME=example
+MYSQL_PASSWORD=example
+MYSQL_DATABASE=example
 MYSQL_PREFIX=Moq_
 MYSQL_MINSIZE=1
 MYSQL_MAXSIZE=100
