--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,43 +1,8 @@
 server {
     listen 80;
     server_name www.moqistar.com moqistar.com;  # 生产环境替换为你的域名
-
-    # 1. Admin 前端（静态文件，Nginx 直接托管）
-    location /admin/ {
-        alias /usr/share/nginx/html/admin/;  # 对应共享卷的 Admin 目录
-        try_files $uri $uri/ /admin/index.html;  # 支持 Vue SPA 路由
-    }
-
-    # 2. Nuxt SSR 前端（反向代理到 Nuxt 服务）
-    location / {
-        proxy_pass http://nuxt:3000;  # 指向 Nuxt 容器的 3000 端口
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-    # 1.1. 服务 _nuxt/ 静态文件（JS/CSS 等，核心优化）
-    location /_nuxt/ {
-        alias /usr/share/nginx/html/nuxtjs/_nuxt/;  # alias 到子目录
-        try_files $uri $uri/ =404;  # 直接返回文件或 404
-        expires 1y;  # 长期缓存（哈希文件名安全）
-        add_header Cache-Control "public, immutable";
-        gzip on;  # 压缩
-        gzip_types text/css application/javascript;
-    }
-
-    # 1.2. 服务其他静态文件（如 images/、favicon.ico）
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        root /usr/share/nginx/html/nuxtjs;
-        try_files $uri $uri/ =404;
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-        gzip on;
-        gzip_types *;
-    }
-
-    # 3. 后端 API（可选：如果前端请求 /api 开头的接口，转发到 Python 服务）
     
+    # 3. 后端 API（可选：如果前端请求 /api 开头的接口，转发到 Python 服务）
     location ~ ^/(api|spi|static|storage)/ {
         proxy_pass http://server:8100;
         proxy_set_header Host $host;
@@ -55,4 +20,24 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
     }
+    
+        # 1. Admin 前端（静态文件，Nginx 直接托管） - SPA 路由 fallback
+    location /admin {
+        alias /usr/share/nginx/html/admin/;
+        index index.html;
+        try_files $uri $uri/ /admin/index.html;
+    }
+    
+    # 2. Nuxt SSR 前端（反向代理到 Nuxt 服务）
+    location / {
+        proxy_pass http://nuxt:3000;  # 指向 Nuxt 容器的 3000 端口
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+
+
+
 }
