--- a/nuxtjs/package.json
+++ b/nuxtjs/package.json
@@ -13,12 +13,16 @@
         "lint:js": "eslint --ext .ts,.tsx,.js,.jsx,.vue src",
         "lint:css": "stylelint ./**/*.{vue,htm,html,css,scss}"
     },
+    "overrides": {
+        "vue": "latest"
+    },
     "dependencies": {
         "@chenfengyuan/vue-countdown": "^2.1.2",
         "@fortawesome/fontawesome-free": "^6.7.2",
         "@headlessui/vue": "^1.7.23",
         "@vueuse/core": "^11.1.0",
         "css-color-function": "^1.3.3",
+        "dayjs": "^1.11.19",
         "element-plus": "^2.8.3",
         "ismobilejs": "^1.1.1",
         "motion-v": "1.7.4",
