--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,5 +1,6 @@
 *.log
-.env
+.env.production
+.env.development
 .htaccess
 .install.lock
 /.idea
@@ -15,4 +16,4 @@
 /**/__pycache__
 /public/nginx.htaccess
 .qiniu_pythonsdk_hostscache.json
-moq-admin
+/moq-admin/
