--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,6 +3,7 @@
 volumes:
   frontend-admin-files:  # Admin 静态文件共享卷
   frontend-nuxtjs-files:  # Nuxt 静态文件共享卷
+  backend-server-files:  # Python 后端文件共享卷
   mysql-data:            # MySQL 数据持久化
   redis-data:            # Redis 数据持久化
 
@@ -77,7 +78,7 @@ services:
     expose:
       - 3000  # 内部暴露端口（不直接对外）
     volumes:
-      - frontend-nuxtjs-files:/shared-files/nuxtjs  # 挂载共享卷
+      - frontend-nuxtjs-files:/app/public  # 挂载共享卷
     restart: unless-stopped
     networks:
       - app-network
@@ -96,6 +97,8 @@ services:
     restart: unless-stopped
     networks:
       - app-network
+    volumes:
+      - backend-server-files:/app/public
     environment:
       # 后端连接 MySQL/Redis 的配置（用服务名作为主机名）
       - DOCKER_ENV=true
