--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,3 +1,21 @@
+# ==================== gzip 全局配置 ====================
+gzip on;
+gzip_vary on;
+gzip_proxied any;                  # 对代理的响应也压缩
+gzip_comp_level 6;
+gzip_types
+    text/plain
+    text/css
+    text/javascript
+    application/json
+    application/javascript
+    application/x-javascript
+    image/svg+xml
+    font/woff
+    font/woff2;
+gzip_min_length 256;
+gzip_buffers 16 8k;
+
 server {
     listen 80;
     server_name www.moqistar.com moqistar.com;  # 生产环境替换为你的域名
