--- a/nuxtjs/package.json
+++ b/nuxtjs/package.json
@@ -4,7 +4,7 @@
     "type": "module",
     "scripts": {
         "dev": "nuxt dev --dotenv .env.development",
-        "build:only-ssr": "nuxt build --dotenv .env.production",
+        "build:only-ssr": "nuxt build --dotenv .env.production && ls .output > .output/file-manifest.txt",
         "build:ssr": "nuxt build --dotenv .env.production && node scripts/build.mjs",
         "build:gen": "nuxt generate --dotenv .env.production && node scripts/build.mjs",
         "generate": "nuxt generate",
