update personal page

--- a/miniprogram/.env.development
+++ b/miniprogram/.env.development
@@ -1,2 +1,3 @@
-TARO_APP_API="http://localhost:8100"
+# TARO_APP_API="http://localhost:8100"
+TARO_APP_API="https://www.moqistar.com"
 TARO_APP_ID="wx45dc28c1a6374980"
