--- a/nuxtjs/package.json
+++ b/nuxtjs/package.json
@@ -25,6 +25,7 @@
         "dayjs": "^1.11.19",
         "element-plus": "^2.8.3",
         "ismobilejs": "^1.1.1",
+        "lodash": "^4.17.21",
         "motion-v": "1.7.4",
         "nuxt": "^3.13.2",
         "pinia": "^2.3.1",
