update the  nginx config

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -15,10 +15,16 @@ gzip_types
     font/woff2;
 gzip_min_length 256;
 gzip_buffers 16 8k;
-
+# 处理 HTTP 裸域名（http://moqistar.com）
 server {
     listen 80;
-    server_name www.moqistar.com moqistar.com;  # 生产环境替换为你的域名
+    server_name moqistar.com;
+    # 重定向到 HTTPS + www 版本
+    return 301 https://www.moqistar.com$request_uri;
+}
+server {
+    listen 80;
+    server_name www.moqistar.com;  # 生产环境替换为你的域名
     
     # 3. 后端 API（可选：如果前端请求 /api 开头的接口，转发到 Python 服务）
     location ~ ^/(api|spi|static|storage)/ {
