--- a/miniprogram/package.json
+++ b/miniprogram/package.json
@@ -59,7 +59,8 @@
     "@tarojs/shared": "4.1.7",
     "@tarojs/taro": "4.1.7",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
@@ -91,7 +92,6 @@
     "typescript": "^5.1.0",
     "vite": "^4.2.0",
     "vite-plugin-imp": "^2.4.0",
-    "weapp-tailwindcss": "^4.4.0",
-    "zustand": "^5.0.8"
+    "weapp-tailwindcss": "^4.4.0"
   }
 }
