--- a/nuxtjs/.env.template
+++ b/nuxtjs/.env.template
@@ -1,8 +1,9 @@
 # 基础路径
-NUXT_API_URL=/
+NUXT_PUBLIC_API_URL=/
 
 # 是否开启ssr,填些任意值开启
-NUXT_SSR=
+NUXT_PUBLIC_SSR=
 
 # 端口号
 NITRO_PORT=3000
+NUXT_PUBLIC_TITLE=moqistar.com
