--- a/nuxtjs/package.json
+++ b/nuxtjs/package.json
@@ -20,6 +20,7 @@
         "@chenfengyuan/vue-countdown": "^2.1.2",
         "@fortawesome/fontawesome-free": "^6.7.2",
         "@headlessui/vue": "^1.7.23",
+        "@nuxtjs/seo": "^3.2.2",
         "@vueuse/core": "^11.1.0",
         "css-color-function": "^1.3.3",
         "dayjs": "^1.11.19",
