--- a/miniprogram/.env.development
+++ b/miniprogram/.env.development
@@ -1,3 +1,3 @@
 # TARO_APP_API="http://localhost:8100"
 TARO_APP_API="https://api.moqistar.com"
-TARO_APP_ID="wx45dc28c1a6374980"
+TARO_APP_ID="wx3a91e4621c3d76c3"
