--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 # ==================== gzip 全局配置 ====================
 gzip on;
 gzip_vary on;
-gzip_proxied any;                  # 对代理的响应也压缩
+gzip_proxied any;
 gzip_comp_level 6;
 gzip_types
     text/plain
@@ -15,28 +15,46 @@ gzip_types
     font/woff2;
 gzip_min_length 256;
 gzip_buffers 16 8k;
-# 处理 HTTP 裸域名（http://moqistar.com）
+
+# ==================== HTTP 强制跳转到 HTTPS + www ====================
 server {
     listen 80;
-    server_name moqistar.com;
-    # 重定向到 HTTPS + www 版本
+    server_name moqistar.com www.moqistar.com;
+
     return 301 https://www.moqistar.com$request_uri;
 }
+
+# ==================== HTTPS 主站（www） ====================
 server {
-    listen 80;
-    server_name www.moqistar.com;  # 生产环境替换为你的域名
-    
-    # 3. 后端 API（可选：如果前端请求 /api 开头的接口，转发到 Python 服务）
+    listen 443 ssl http2;
+    server_name www.moqistar.com;
+
+    # SSL证书配置
+    ssl_certificate /etc/nginx/conf.d/Cert/certificate.crt;
+    ssl_certificate_key /etc/nginx/conf.d/Cert/private.key;
+    ssl_trusted_certificate /etc/nginx/conf.d/Cert/ca_bundle.crt;
+
+    # SSL优化配置
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+    ssl_session_tickets off;
+
+    # ==================== API 反向代理 ====================
     location ~ ^/(api|spi|static|storage)/ {
         proxy_pass http://server:8100;
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;  
-        proxy_set_header REMOTE-HOST $remote_addr;
-        add_header X-Cache $upstream_cache_status;
-        proxy_set_header X-Host $host:$server_port;
-        proxy_set_header X-Scheme $scheme;
+
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Forwarded-Ssl on;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port 443;
+
         proxy_connect_timeout 30s;
         proxy_read_timeout 86400s;
         proxy_send_timeout 30s;
@@ -44,24 +62,54 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
     }
-    
-        # 1. Admin 前端（静态文件，Nginx 直接托管） - SPA 路由 fallback
-    location /admin {
+
+    # ==================== Admin 前端（SPA） ====================
+    # 重要：必须写 /admin/，避免 alias 死循环
+    location /admin/ {
         alias /usr/share/nginx/html/admin/;
         index index.html;
         try_files $uri $uri/ /admin/index.html;
     }
-    
-    # 2. Nuxt SSR 前端（反向代理到 Nuxt 服务）
+
+    # ==================== Nuxt SSR 前端 ====================
     location / {
-        proxy_pass http://nuxt:3000;  # 指向 Nuxt 容器的 3000 端口
+        proxy_pass http://nuxt:3000;
+
+        # 核心：告诉 Nuxt 外层是 HTTPS，避免循环重定向
         proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Forwarded-Ssl on;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port 443;
+
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        proxy_connect_timeout 30s;
+        proxy_read_timeout 86400s;
+        proxy_send_timeout 30s;
     }
+}
 
+# ==================== HTTPS 裸域名 moqistar.com 强制跳转 www ====================
+server {
+    listen 443 ssl http2;
+    server_name moqistar.com;
 
+    ssl_certificate /etc/nginx/conf.d/Cert/certificate.crt;
+    ssl_certificate_key /etc/nginx/conf.d/Cert/private.key;
+    ssl_trusted_certificate /etc/nginx/conf.d/Cert/ca_bundle.crt;
 
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+    ssl_session_tickets off;
 
+    return 301 https://www.moqistar.com$request_uri;
 }
