--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,33 +1,64 @@
-# HTTP反向代理相关配置开始 >>>
-location ~ /purge(/.*) {
-    proxy_cache_purge cache_one 10.31.120.40$request_uri$is_args$args;
+# ==================== gzip 全局配置 ====================
+gzip on;
+gzip_vary on;
+gzip_proxied any;                  # 对代理的响应也压缩
+gzip_comp_level 6;
+gzip_types
+    text/plain
+    text/css
+    text/javascript
+    application/json
+    application/javascript
+    application/x-javascript
+    image/svg+xml
+    font/woff
+    font/woff2;
+gzip_min_length 256;
+gzip_buffers 16 8k;
+# 处理 HTTP 裸域名（http://moqistar.com）
+server {
+    listen 80;
+    server_name moqistar.com;
+    # 重定向到 HTTPS + www 版本
+    return 301 https://www.moqistar.com$request_uri;
 }
+server {
+    listen 80;
+    server_name www.moqistar.com;  # 生产环境替换为你的域名
+    
+    # 3. 后端 API（可选：如果前端请求 /api 开头的接口，转发到 Python 服务）
+    location ~ ^/(api|spi|static|storage)/ {
+        proxy_pass http://server:8100;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;  
+        proxy_set_header REMOTE-HOST $remote_addr;
+        add_header X-Cache $upstream_cache_status;
+        proxy_set_header X-Host $host:$server_port;
+        proxy_set_header X-Scheme $scheme;
+        proxy_connect_timeout 30s;
+        proxy_read_timeout 86400s;
+        proxy_send_timeout 30s;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+    
+        # 1. Admin 前端（静态文件，Nginx 直接托管） - SPA 路由 fallback
+    location /admin {
+        alias /usr/share/nginx/html/admin/;
+        index index.html;
+        try_files $uri $uri/ /admin/index.html;
+    }
+    
+    # 2. Nuxt SSR 前端（反向代理到 Nuxt 服务）
+    location / {
+        proxy_pass http://nuxt:3000;  # 指向 Nuxt 容器的 3000 端口
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-location ~ ^/(api|spi|static|storage)/ {
-    proxy_pass http://10.31.120.40:8100;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;  
-    proxy_set_header REMOTE-HOST $remote_addr;
-    add_header X-Cache $upstream_cache_status;
-    proxy_set_header X-Host $host:$server_port;
-    proxy_set_header X-Scheme $scheme;
-    proxy_connect_timeout 30s;
-    proxy_read_timeout 86400s;
-    proxy_send_timeout 30s;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
 }
-
-location /admin {
-    alias /www/wwwroot/waitadmin_python/server/public/admin/;
-    try_files $uri $uri/ /admin/index.html; 
-}
-
-location / {
-    alias /www/wwwroot/waitadmin_python/server/public/pc/;
-    try_files $uri $uri/ /index.html; 
-}
-# HTTP反向代理相关配置结束 <<<
