--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,115 +1,53 @@
-# ==================== gzip 全局配置 ====================
-gzip on;
-gzip_vary on;
-gzip_proxied any;
-gzip_comp_level 6;
-gzip_types
-    text/plain
-    text/css
-    text/javascript
-    application/json
-    application/javascript
-    application/x-javascript
-    image/svg+xml
-    font/woff
-    font/woff2;
-gzip_min_length 256;
-gzip_buffers 16 8k;
+ # gzip 全局配置
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/javascript application/json application/javascript application/x-javascript image/svg+xml font/woff font/woff2;
+    gzip_min_length 256;
+    gzip_buffers 16 8k;
 
-# ==================== HTTP 强制跳转到 HTTPS + www ====================
-server {
-    listen 80;
-    server_name moqistar.com www.moqistar.com;
-
-    return 301 https://www.moqistar.com$request_uri;
-}
-
-# ==================== HTTPS 主站（www） ====================
-server {
-    listen 443 ssl http2;
-    server_name www.moqistar.com;
-
-    # SSL证书配置
-    ssl_certificate /etc/nginx/conf.d/Cert/certificate.crt;
-    ssl_certificate_key /etc/nginx/conf.d/Cert/private.key;
-    ssl_trusted_certificate /etc/nginx/conf.d/Cert/ca_bundle.crt;
-
-    # SSL优化配置
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
-    ssl_prefer_server_ciphers on;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-    ssl_session_tickets off;
-
-    # ==================== API 反向代理 ====================
-    location ~ ^/(api|spi|static|storage)/ {
-        proxy_pass http://server:8100;
-
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_set_header X-Forwarded-Ssl on;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port 443;
-
-        proxy_connect_timeout 30s;
-        proxy_read_timeout 86400s;
-        proxy_send_timeout 30s;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+    # HTTP 重定向
+    server {
+        listen 80;
+        server_name moqistar.com www.moqistar.com;
+        return 301 https://www.moqistar.com$request_uri;
     }
 
-    # ==================== Admin 前端（SPA） ====================
-    # 重要：必须写 /admin/，避免 alias 死循环
-    location /admin/ {
-        alias /usr/share/nginx/html/admin/;
-        index index.html;
-        try_files $uri $uri/ /admin/index.html;
+    # HTTPS 主站
+    server {
+        listen 443 ssl;
+        server_name www.moqistar.com;
+
+        ssl_certificate ./certificate.crt;
+        ssl_certificate_key ./private.key;
+
+        # Admin 前端
+        location /admin {
+            alias /usr/share/nginx/html/admin/;
+            index index.html;
+            try_files $uri $uri/ /admin/index.html;
+        }
+
+        # Nuxt SSR 前端
+        location / {
+            proxy_pass http://nuxt:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Python 后端 API
+        location ~ ^/(api|spi|static|storage)/ {
+            proxy_pass http://server:8100;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header REMOTE-HOST $remote_addr;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
     }
-
-    # ==================== Nuxt SSR 前端 ====================
-    location / {
-        proxy_pass http://nuxt:3000;
-
-        # 核心：告诉 Nuxt 外层是 HTTPS，避免循环重定向
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_set_header X-Forwarded-Ssl on;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port 443;
-
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-
-        proxy_connect_timeout 30s;
-        proxy_read_timeout 86400s;
-        proxy_send_timeout 30s;
-    }
-}
-
-# ==================== HTTPS 裸域名 moqistar.com 强制跳转 www ====================
-server {
-    listen 443 ssl http2;
-    server_name moqistar.com;
-
-    ssl_certificate /etc/nginx/conf.d/Cert/certificate.crt;
-    ssl_certificate_key /etc/nginx/conf.d/Cert/private.key;
-    ssl_trusted_certificate /etc/nginx/conf.d/Cert/ca_bundle.crt;
-
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
-    ssl_prefer_server_ciphers on;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-    ssl_session_tickets off;
-
-    return 301 https://www.moqistar.com$request_uri;
-}
