--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -13,14 +13,37 @@
         server_name moqistar.com www.moqistar.com;
         return 301 https://www.moqistar.com$request_uri;
     }
+    server {
+        listen 443 ssl;
+        server_name moqistar.com;
 
+        ssl_certificate /etc/nginx/ssl/full_chain.crt; # 服务器证书
+        ssl_certificate_key /etc/nginx/ssl/private.key;
+
+        # 可选的安全配置
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+
+        return 301 https://www.moqistar.com$request_uri;
+    }
     # HTTPS 主站
     server {
         listen 443 ssl;
         server_name www.moqistar.com;
 
-        ssl_certificate ./certificate.crt;
-        ssl_certificate_key ./private.key;
+        ssl_certificate /etc/nginx/ssl/full_chain.crt; # 服务器证书
+        ssl_certificate_key /etc/nginx/ssl/private.key;
+
+
+        # 可选的安全配置
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
 
         # Admin 前端
         location /admin {
