--- a/miniprogram/package.json
+++ b/miniprogram/package.json
@@ -77,6 +77,7 @@
     "autoprefixer": "^10.4.21",
     "babel-plugin-import": "^1.13.8",
     "babel-preset-taro": "4.1.7",
+    "baseline-browser-mapping": "^2.9.11",
     "eslint": "^8.12.0",
     "eslint-config-taro": "4.1.7",
     "eslint-plugin-import": "^2.12.0",
