--- a/miniprogram/package.json
+++ b/miniprogram/package.json
@@ -41,8 +41,9 @@
   "dependencies": {
     "@babel/runtime": "^7.21.5",
     "@nutui/icons-react-taro": "3.0.2-cpp.3.beta.2",
-    "@nutui/nutui-biz": "1.0.0-beta.2",
-    "@nutui/nutui-react-taro": "3.0.19-cpp.11",
+    "@taroify/commerce": "^0.9.0",
+    "@taroify/core": "^0.9.0",
+    "@taroify/icons": "^0.9.0",
     "@tarojs/components": "4.1.7",
     "@tarojs/helper": "4.1.7",
     "@tarojs/plugin-framework-react": "4.1.7",
